Doc strings now parse deeply

--- a/client/app/ldoc/ldoc.html
+++ b/client/app/ldoc/ldoc.html
@@ -1,8 +1,18 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-    
-    <div ui-view>
-      This is the first example of a Logic Document.
-      It uses TOML as the storage medium of the raw document.
-      <a href="/ldoc/test/">Ttest</a>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-3">
+        <button class="btn-block btn btn-primary">We made it!</button>
+        {{ NOMATCH: toc }}
+      </div>
+      <div class="col-sm-9">
+            <div class="jumbotron">
+      <h1>Nyikit Market</h1>
+      <p>Business Plan</p>
+      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
     </div>
-    
+    <h1 id="welcome-to-logic-doc-test-">Welcome to Logic Doc Test!</h1>
+<p>  As you can see this is a neat little thingy :)</p>
+Hello! :P
+      </div>
+    </div>
+  </div>
