working ToC for documents, example evolving

--- a/client/app/ldoc/ldoc.html
+++ b/client/app/ldoc/ldoc.html
@@ -1,18 +1,114 @@
   <div class="container">
     <div class="row">
-      <div class="col-sm-3">
-        <button class="btn-block btn btn-primary">We made it!</button>
-        {{ NOMATCH: toc }}
-      </div>
-      <div class="col-sm-9">
+      <div class="col-sm-10 col-sm-offset-1">
             <div class="jumbotron">
-      <h1>Nyikit Market</h1>
-      <p>Business Plan</p>
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+      <div class="container">
+        <h1>Nyikit Deck</h1>
+        <p>{{tagline}}</p>
+      </div>
     </div>
-    <h1 id="welcome-to-logic-doc-test-">Welcome to Logic Doc Test!</h1>
-<p>  As you can see this is a neat little thingy :)</p>
-Hello! :P
+    
+        <div class="row" data-spy="affix" data-offset-top="60" >
+
+          <div class="col-sm-8">
+            <section><h3 id="elevator-pitch">Elevator Pitch</h3>
+<p>  Nyikit lets you sell products and services easily and quickly. It also lets anyone to create collections of items based on categories or topics, and shop fronts that aggregate products in unique ways.</p>
+<p>  Sellers and service providers can easily showcase their products on a custom profile page.</p>
+<p>  Nyikit is community driven hub for anything commerce.</p>
+</section><section><h1 id="summary">Summary</h1>
+<p>  Nyikit is a novel marketplace fit for the 21st century. It empowers all the particpants in a financial transaction with cutting modern tools and utilities.</p>
+<p>  The novelty of Nyikit&#39;s marketplaces is two folds; </p>
+<p>  It lets anyone sells anything be it products, services, or a mix and match of both and additionally products may be sold in bundles, or as dependencies of one another allowing the creation of supply chains.</p>
+<p>  It also introduces aggregation and curation of products and services in the form of Collections and Shops that are both user created and managed. </p>
+<p>  Collections are communities where registered users can submit products or services, and then vote said products or service &quot;up&quot; or &quot;down&quot; to organize the submissions and determine their position on the collection&#39;s page.</p>
+<p>  Shops are cummunities where shop creators can fine tune how products and services are listed on their pages.</p>
+<p>  User profiles are provided to users to communicate with their customers, profiles can be customized with a profile picture, cover art, and a feed of their recent activity (e.g. product submissions to collections and shops).</p>
+</section><section><h1 id="team">Team</h1>
+<h2 id="gil">Gil</h2>
+<p>  Gil Moshayof is our ninja developer with an endless list of abilities. Gil is currently employed as mobile dev specialist at Wix.</p>
+<h2 id="sharon">Sharon</h2>
+<p>  Sharon Lenger is our community and marketing expert. Sharon brings her ability to communicate to the masses after several years of hosting several TV shows on the Israeli television.</p>
+<h2 id="eli">Eli</h2>
+<p>  Eli Sklar is the visionary entreprenour behind Nyikit. Eli comes from a backgroun of 10 years in web development and enjoyes hacking different technologies together.</p>
+</section><section><h1 id="the-state-of-the-art">The State of The Art</h1>
+<p>  <h2><small><i>or</i> What&#39;s Wrong with Today&#39;s Commerce</small></h2>
+  While many fields in our daily lives have advanced greatly in the past couple of decades, many other field remain almost unchanged, some of them unchanged for centuries and millenia.</p>
+<p>  One such field is the field Commerce at large. Humans do business today almost exactly like it was done ten thousand years ago.</p>
+<p>  Even though we have eBay and Amazon to boast, the way business part is done and the way consumers discover a product remained in the dark ages and still rely on heavy leg work by the producers of goods and marketers and resellers that sell them.</p>
+<p>  Supply chains and multi-faceted products are still essentially done the same way - two people meet, discuss a deal, involve their attornies to create a deal, they both sign it, and then they both <em>hope</em> that both sides fulfill their end of the deal as agreed.</p>
+<p>  On the other hand consumers are flooded with choices in an everly growing maze of <em>(miss)</em>information that when not neglected to be addressed is partially solved with small communities of specialists and enthusiasts in esoteric or closed forums usually unreachable by the general public.</p>
+</section>
+          </div>
+
+          <div class="col-sm-4">
+            <div class="toc">
+              <ul>
+<li><a href="#elevator-pitch">Elevator Pitch</a></li>
+<li><a href="#summary">Summary</a></li>
+<li><a href="#team">Team</a><ul>
+<li><a href="#gil">Gil</a></li>
+<li><a href="#sharon">Sharon</a></li>
+<li><a href="#eli">Eli</a></li>
+</ul>
+</li>
+<li><a href="#the-state-of-the-art">The State of The Art</a></li>
+</ul>
+
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
   </div>
+    <div class="footer">
+    <div class="container">
+      <div class="clearfix">
+        <div class="footer-logo"><a href="#">Grid CT</a></div>
+        <dl class="footer-nav">
+          <dt class="nav-title">PORTFOLIO</dt>
+          <dd class="nav-item"><a href="#">Web Design</a></dd>
+          <dd class="nav-item"><a href="#">Branding &amp; Identity</a></dd>
+          <dd class="nav-item"><a href="#">Mobile Design</a></dd>
+          <dd class="nav-item"><a href="#">Print</a></dd>
+          <dd class="nav-item"><a href="#">User Interface</a></dd>
+        </dl>
+        <dl class="footer-nav">
+          <dt class="nav-title">ABOUT</dt>
+          <dd class="nav-item"><a href="#">The Company</a></dd>
+          <dd class="nav-item"><a href="#">History</a></dd>
+          <dd class="nav-item"><a href="#">Vision</a></dd>
+        </dl>
+        <dl class="footer-nav">
+          <dt class="nav-title">GALLERY</dt>
+          <dd class="nav-item"><a href="#">Flickr</a></dd>
+          <dd class="nav-item"><a href="#">Picasa</a></dd>
+          <dd class="nav-item"><a href="#">iStockPhoto</a></dd>
+          <dd class="nav-item"><a href="#">PhotoDune</a></dd>
+        </dl>
+        <dl class="footer-nav">
+          <dt class="nav-title">CONTACT</dt>
+          <dd class="nav-item"><a href="#">Basic Info</a></dd>
+          <dd class="nav-item"><a href="#">Map</a></dd>
+          <dd class="nav-item"><a href="#">Conctact Form</a></dd>
+        </dl>
+      </div>
+      <div class="footer-copyright text-center">Copyright © 2014 Flathemes.All rights reserved.</div>
+    </div>
+  </div>
+  <script>
+  $(function() {
+    $('.toc').css('width', $('.toc').width());
+    $('.toc').affix({
+      offset: {
+        top: 100,
+    bottom: function () {
+      console.log('calculating height...', $('.footer').outerHeight(true));
+      return $('.footer').outerHeight(true);
+    }
+  }
+      });
+    $('.toc ul').addClass('nav nav-pills nav-stacked');
+    $('body').scrollspy({ target: '.toc', offset: 100 });
+    });
+  </script>
