--- a/client/index.html
+++ b/client/index.html
@@ -70,6 +70,9 @@
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
+      
+          <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
         <!-- endbuild -->
 
 </body>
